<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="enter_the_cost_of_the_meal">Enter the cost of the meal</string>
    <string name="rate_the_service_on_a_scale_from_1_10">Rate the service on a scale from 1-10</string>
    <string name="_1_3">1-3</string>
    <string name="_4_5">4-5</string>
    <string name="_6_7">6-7</string>
    <string name="_8_9">8-9</string>
    <string name="_10">10!</string>
</resources>
