<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_height="wrap_content"
     android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="com.example.christine.tipcalculator.MainActivity">

        <EditText
            android:id="@+id/et_MealCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:hint="@string/enter_the_cost_of_the_meal"
            android:inputType="numberDecimal"/>
        <TextView
            android:id="@+id/tv_DisplayMealCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tv_Rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/rate_the_service_on_a_scale_from_1_10"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/btn_OneToThree"
                android:text="@string/_1_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>
            <Button
                android:text="@string/_4_5"
                android:id="@+id/btn_FourToFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/btn_SixToSeven"
                android:text="@string/_6_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>
            <Button
                android:id="@+id/btn_EightToNine"
                android:text="@string/_8_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_Ten"
            android:text="@string/_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>
        <TextView
            android:id="@+id/tv_PercentTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="18dp"/>
        <TextView
            android:id="@+id/tv_SuggestedTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="20dp"
            android:gravity="center"/>

    </LinearLayout>

</ScrollView>